--- a/bucket/admin/manifest.json
+++ b/bucket/admin/manifest.json
@@ -2,7 +2,7 @@
   "name": "Discover Sharm - Admin Dashboard",
   "short_name": "DS Admin",
   "description": "لوحة تحكم Discover Sharm للإدارة والحجوزات",
-  "start_url": "/admin/",
+  "start_url": "/admin/m-trips.html",
   "display": "standalone",
   "background_color": "#1A1A2E",
   "theme_color": "#1A1A2E",
